--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
-    <link rel="preload" href="{% static 'css/styles.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <meta name="theme-color" content="#C2B5FF" />
 
+    <title>{% block title %}{% endblock %}</title>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
-</head>
-<body>
-
-    {% block body %}
-
-        привет {% static 'css/styles.css' %}
+    <script src="{% static 'js/tabs.js' %}" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <script src="{% static 'js/hot_reload.js' %}" defer></script>
+    <script src="{% static 'js/header_gradient.js' %}" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    {% block extra_head %}
     {% endblock %}
-
+</head>
+<body x-data="tabsHandler()" x-init="init()" style="">
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
