--- a/section/templates/section/inc/tabs/_main.html
+++ b/section/templates/section/inc/tabs/_main.html
@@ -1,4 +1,4 @@
-<div x-show="tab === 'main'" style="display: none;">
+<div x-show="$store.tabs.tab === 'main'" style="display: none;">
     <div class="main_block">
         <button>Неделя</button>
         <button>Месяц</button>
