--- a/section/templates/section/inc/_header.html
+++ b/section/templates/section/inc/_header.html
@@ -1,22 +1,34 @@
-<header>
+<header x-data="tabsHandler()">
+    <div @click="setTab('menu')" class="icon">
+        <div :class="{ 'animate-icon': animate.menu }">
+            <template x-if="tab === 'menu'">
+              {% include "svg/home.svg" %}
+            </template>
+            <template x-if="tab !== 'menu'">
+              {% include "svg/toast.svg" %}
+            </template>
+        </div>
+    </div>
 
-  <div @click="setTab(tab === 'menu' ? 'main' : 'menu')" class="icon">
-    <template x-if="tab === 'menu'">
-        {% include "svg/home.svg" %}
-    </template>
-    <template x-if="tab !== 'menu'">
-        {% include "svg/toast.svg" %}
-    </template>
-  </div>
+    <a href="{% url 'index' %}">FINANCE LENS</a>
 
-  <a href="{% url 'index' %}">FINANCE LENS</a>
+    <div @click="setTab('account')" class="icon">
+        <div :class="{ 'animate-icon': animate.account }">
+            <template x-if="tab === 'account'">
+              {% include "svg/home.svg" %}
+            </template>
+            <template x-if="tab !== 'account'">
+              {% include "svg/account.svg" %}
+            </template>
+        </div>
+    </div>
 
-  <div @click="setTab(tab === 'account' ? 'main' : 'account')" class="icon">
-    <template x-if="tab === 'account'">
-      {% include "svg/home.svg" %}
-    </template>
-    <template x-if="tab !== 'account'">
-      {% include "svg/account.svg" %}
-    </template>
-  </div>
 </header>
+
+<script>
+document.addEventListener('alpine:init', () => {
+  Alpine.store('tabs', {
+    tab: 'main'
+  });
+});
+</script>
