--- a/section/templates/section/inc/tabs/_account.html
+++ b/section/templates/section/inc/tabs/_account.html
@@ -1,4 +1,4 @@
-<div x-show="tab === 'account'" style="display: none;">
+<div x-show="$store.tabs.tab === 'account'" style="display: none;">
     <div class="main_block referral_block">
         <div class="caption">Моя реферальная ссылка</div>
         <div class="over_block link">
