--- a/section/templates/section/inc/tabs/_menu.html
+++ b/section/templates/section/inc/tabs/_menu.html
@@ -1,19 +1,5 @@
-<div x-show="tab === 'menu'" style="display: none;">
-    <h2>Моя комната</h2>
-    <div>Валюта: <span class="font-semibold">USD</span></div>
-
-    <div class="main_block">
-        <p><strong>Владелец</strong></p>
-        <p>Имя: Артем</p>
-    </div>
-
-    <div class="main_block">
-        <p>Имя: Катерина</p>
-        <div>
-            <button>Принять</button>
-            <button>Отклонить</button>
-        </div>
-    </div>
-
-    <button>Добавить участника</button>
+<div x-show="$store.tabs.tab === 'menu'" style="display: none;" class="menu">
+    {% include 'section/inc/menu/_caption.html' %}
+    {% include 'section/inc/menu/_currency.html' %}
+    {% include 'section/inc/menu/_team.html' %}
 </div>
