--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!doctype html>
+{% load static %}
 <html lang="{{ request.LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
@@ -12,14 +12,17 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
     <script src="{% static 'js/tabs.js' %}" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="{% static 'js/hot_reload.js' %}" defer></script>
     <script src="{% static 'js/header_gradient.js' %}" defer></script>
+    <script src="{% static 'js/currency.js' %}" defer></script>
+    <script src="{% static 'js/init.js' %}" defer></script>
+    <script src="{% static 'js/team.js' %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     {% block extra_head %}
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
-<body x-data="tabsHandler()" x-init="init()" style="">
+<body x-data="tabsHandler()" x-init="init_tabs()" style="">
     {% block body %}
     {% endblock %}
 </body>
