added animation for next_section switcher

--- a/section/templates/section/inc/menu/_caption.html
+++ b/section/templates/section/inc/menu/_caption.html
@@ -1,7 +1,21 @@
 <template x-if="Alpine.store('appData').sections.length > 1">
     <div class="main_block as_caption menu caption_block" style="border-radius: 0;">
          {% include 'section/inc/menu/_section_name.html' %}
-        <div @click="Alpine.store('appData').nextSection()" class="nav_btn">{% include 'svg/arrow_down.svg' %}</div>
+        <div
+            x-data="{ animate: false }"
+            @click="
+                animate = false;
+                Alpine.store('appData').nextSection();
+                requestAnimationFrame(() => {
+                    animate = true;
+                    setTimeout(() => animate = false, 250);
+                });
+            "
+            :class="{ 'animate-icon': animate }"
+            class="nav_btn"
+        >
+            {% include 'svg/arrow_down.svg' %}
+        </div>
     </div>
 </template>
 
