--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -98,6 +98,80 @@ header {
         padding: calc(var(--default_block_margin_bottom_int) * 2px) var(--default_block_margin_LR) 10px var(--default_block_margin_LR);
         z-index: -10;
     }
+    &.chart {
+        position: relative;
+
+        &.nav {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            height: 20px;
+
+            & a {
+                font-size: 50%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                width: 80px;
+                text-align: center;
+                text-transform: uppercase;
+                padding: 3px 5px;
+                border-radius: 5px;
+                background-color: var(--main_btn_bg_color);
+                transition: background-color 0.5s;
+
+
+
+                &.active {
+                    background-color: var(--main_purple);
+                }
+            }
+        }
+
+
+        #chart_legend {
+          margin-top: 20px;
+        }
+
+        & .legend-item {
+            display: inline-block;
+            margin-right: 10px;
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            cursor: pointer;
+            user-select: none;
+            transition: opacity 0.2s;
+            border-radius: 10px;
+        }
+
+        & #chart_info {
+            margin-top: 10px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            background: #f9f9f9;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            border-radius: 5px;
+        }
+    }
+}
+#chartjs-tooltip {
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-radius: 3px;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.1s ease;
+    padding: 10px;
+    pointer-events: none;
+    z-index: 1000;
+}
+#myChart {
+    width: 100%;
+    height: 1500px;
 }
 .over_block {
     background-color: var(--main_btn_bg_color);
@@ -274,7 +348,7 @@ header {
     & .option_group {
         border-radius: var(--default_block_border_radius);
         background-color: var(--bg_color);
-        padding: 0 10px 0 0;
+        padding: 0 10px 0 10px;
         margin-bottom: var(--default_block_margin_bottom);
 
         box-shadow: var(--default_block_box_shadow);
