--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#C2B5FF" />
 
     <title>{% block title %}{% endblock %}</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
     <script src="{% static 'js/tabs.js' %}" defer></script>
@@ -17,6 +18,9 @@
     <script src="{% static 'js/currency.js' %}" defer></script>
     <script src="{% static 'js/init.js' %}" defer></script>
     <script src="{% static 'js/team.js' %}" defer></script>
+
+    <script src="{% static 'js/chart.js' %}" defer></script>
+    <script src="{% static 'js/chart_nav.js' %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     {% block extra_head %}
     {% endblock %}
