--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -5,6 +5,7 @@
     --main_green: #4cd964;
     --main_text_color: black;
     --main_btn_bg_color: #ECECEC;
+    --main_btn_active_bg_color: #D9D9D9;
 
     --default_block_margin_bottom_int: 13;
     --default_block_margin_bottom: calc(var(--default_block_margin_bottom_int) * 1px);
@@ -23,6 +24,8 @@
 
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+
+    --receipt_item_bg_color: #F9F9F9;
 }
 
 html, body {
@@ -32,6 +35,8 @@ html, body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     min-height: calc(100vh + 30px);
+    height: 120%;
+    color: var(--main_text_color)
 }
 input {
     border: none;
@@ -483,3 +488,265 @@ input[type="checkbox"] {
     100% { transform: scale(1); }
   }
 
+#feed {
+    position: relative;
+    & .header {
+        height: 30px;
+        font-size: 20px;
+        text-transform: uppercase;
+        color: var(--main_text_color);
+        transition: margin .5s, border-radius .5s;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 2;
+
+        & .block {
+            display: flex;
+            width: 50px;
+            height: 100%;
+
+            &:first-child {
+                justify-content: start;
+            }
+            &:last-child {
+                justify-content: end;
+            }
+        }
+
+        &.sticky {
+            position: sticky;
+            top: 0;
+            margin: 0 calc(var(--default_block_margin_LR) * -1px);
+            border-radius: 0;
+
+            & .block .photo_block {
+                margin-right: var(--default_block_margin_LR);
+            }
+            & .block .size {
+                margin-left: var(--default_block_margin_LR);
+            }
+        }
+
+        & .size {
+            display: flex;
+            align-items: center;
+            font-size: 17px;
+            padding: 0;
+            transition: margin .5s;
+            & select {
+                height: 100%;
+                padding: 0 5px;
+                border-radius: 5px;
+                text-align: center;
+                color: var(--main_text_color);
+                background-color: var(--main_btn_bg_color);
+                border: none;
+                outline: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                text-align-last: center;
+                font-size: 17px;
+
+                & option {
+                    text-align: center;
+                }
+
+                &::before {
+                    display: none;
+                    content: "";
+                }
+            }
+        }
+        & .photo_block {
+            overflow: hidden;
+            width: 30px;
+            height: 30px;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            transition: margin .5s;
+        }
+        & .photo {
+            background-color: var(--main_btn_bg_color);
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding: 0 5px;
+            border-radius: 5px;
+            transition: margin .5s;
+            position: relative;
+            cursor: pointer;
+
+            & svg {
+                width: 20px;
+                height: 20px;
+            }
+
+              &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 1px;
+                width: 141.42%;
+                height: 2px;
+                background: black;
+                transform: rotate(45deg);
+                transform-origin: left;
+                transition: width 0.5s;
+              }
+              &.active::before {
+                width: 0;
+              }
+
+        }
+    }
+    & .receipt {
+        margin: var(--default_block_margin_bottom) var(--default_block_margin_LR);
+        & .shop {
+            margin-bottom: var(--default_block_margin_bottom);
+            & .name {
+                font-size: 15px;
+                font-weight: bold;
+                text-align: center;
+            }
+            & .address {
+                margin-top: 5px;
+                font-size: 10px;
+                font-weight: 500;
+                text-align: center;
+            }
+        }
+        & .photo {
+            --border-radius: 10px;
+            border-radius: var(--border-radius);
+            max-height: 300px;
+            overflow-y: scroll;
+            box-shadow: var(--default_block_box_shadow);
+            background-color: var(--receipt_item_bg_color);
+
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            & img {
+                width: 100%;
+                height: auto;
+                border-radius: var(--border-radius);
+                margin-bottom: -5px;
+
+            }
+        }
+
+        & .items ul {
+            padding: 0;
+            margin: 0;
+            & li {
+                display: flex;
+                justify-content: space-between;
+                margin: var(--default_block_margin_bottom) 0;
+                background-color: var(--receipt_item_bg_color);
+                padding: var(--default_block_padding);
+                border-radius: 10px;
+                box-shadow: var(--default_block_box_shadow);
+                &:first-child {
+                    margin-top: 0;
+                }
+                & .col {
+                    display: flex;
+                    flex-direction: column;
+
+                }
+                & .name {
+                    font-size: 13px;
+                    font-weight: 500;
+                }
+                & .category {
+                    font-size: 8px;
+                }
+                & .price {
+                    display: flex;
+                    align-items: center;
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                &.total {
+                    & .name {
+                        font-size: 16px;
+                    }
+                    & .total_value {
+                        font-size: 16px;
+                    }
+
+                }
+            }
+        }
+        & img {
+            max-width: 100%;
+            height: 200px;
+        }
+        & .date {
+            opacity: 0.6;
+            padding: 0 5px 0 0;
+            margin: 0;
+            text-align: right;
+            font-size: 13px;
+            font-weight: 300;
+
+        }
+    }
+}
+#paginator {
+    margin-bottom: var(--default_block_margin_bottom);
+    padding: var(--default_block_padding);
+    .paginator_buttons {
+        display: flex;
+        justify-content: center;
+
+        & button {
+            border-radius: 5px;
+            border: none;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            background-color: var(--main_btn_bg_color);
+            margin: 0 5px;
+            font-size: 16px;
+            color: var(--main_text_color);
+            text-align: center;
+            box-shadow: var(--default_block_box_shadow);
+            transition: opacity .5s, background-color .5s;
+            padding: 0;
+
+            &.active {
+                background-color: var(--main_purple);
+            }
+
+            &.previous {
+                box-shadow: none;
+                background-color: transparent;
+                & svg {
+                    transform: rotate(90deg);
+                }
+            }
+            &.next {
+                box-shadow: none;
+                background-color: transparent;
+                & svg {
+                    transform: rotate(-90deg);
+                }
+            }
+            &.next,
+            &.previous {
+                opacity: 0.2;
+                &.active {
+                    opacity: 1;
+                }
+            }
+
+
+
+        }
+    }
+}
