--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
+    <script src="{% static 'js/detect_sticky.js' %}" defer></script>
     <script src="{% static 'js/init.js' %}" defer></script>
     <script src="{% static 'js/tabs.js' %}" defer></script>
     <script src="{% static 'js/hot_reload.js' %}" defer></script>
@@ -21,6 +22,7 @@
 
     <script src="{% static 'js/chart.js' %}" defer></script>
     <script src="{% static 'js/chart_nav.js' %}" defer></script>
+    <script src="{% static 'js/receipt_feed.js' %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     {% block extra_head %}
     {% endblock %}
