--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <script src="{% static 'js/currency.js' %}" defer></script>
     <script src="{% static 'js/team.js' %}" defer></script>
 
-    <script src="{% static 'js/chart.js' %}" defer></script>
+    <script src="{% static 'js/charts.js' %}" defer></script>
     <script src="{% static 'js/chart_nav.js' %}" defer></script>
     <script src="{% static 'js/receipt_feed.js' %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
