--- a/section/templates/section/inc/tabs/_main.html
+++ b/section/templates/section/inc/tabs/_main.html
@@ -1,5 +1,6 @@
 <div x-show="$store.tabs.tab === 'main'" style="display: none;">
 
+    {% include 'section/inc/main/_periods.html' %}
     {% include 'section/inc/main/_expenses.html' %}
     {% include 'section/inc/main/_chart.html' %}
     {% include 'section/inc/main/feed/_feed.html' %}
