--- a/section/templates/section/inc/main/_expenses.html
+++ b/section/templates/section/inc/main/_expenses.html
@@ -6,11 +6,9 @@
          const diff = ed.value - ed.previous_value;
          const absDiff = Math.abs(diff).toFixed(2);
          if(diff > 0) {
-           return 'На ' + $store.charts.currency.code + absDiff + ' больше, чем за прошлый период';
+           return 'На ' + absDiff + ' больше';
          } else if(diff < 0) {
-           return 'На ' + $store.charts.currency.code + absDiff + ' меньше, чем за прошлый период';
-         } else {
-           return 'Без изменений по сравнению с прошлым периодом';
+           return 'На ' + absDiff + ' меньше';
          }
        }
      }"
@@ -22,5 +20,7 @@
          x-text="$store.charts.currency.code + ' ' + $store.charts.expensesData.value">
     </div>
   </div>
-  <div class="note"  x-show="$store.charts.expensesData.previous_value > 0 " x-text="getExpenseNote()"></div>
+  <div class="note"  x-show="$store.charts.expensesData.previous_value > 0 ">
+      <div x-text="getExpenseNote()"></div>
+  </div>
 </div>
